// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NtroSectionContainer component should render default view 1`] = `
<ContextProvider
  value={
    Object {
      "formValues": Object {},
    }
  }
>
  <Memo(NtroSection) />
</ContextProvider>
`;

exports[`NtroSectionContainer component should render disabled view 1`] = `
<ContextProvider
  value={
    Object {
      "formValues": Object {},
    }
  }
>
  <Memo(NtroSection)
    disabled={true}
  />
</ContextProvider>
`;
